// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnorderedList /> can have a list style 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c3 {
  position: relative;
  line-height: 1.5;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  font-weight: 400;
}

.c3::before {
  display: block;
  position: absolute;
  left: -2rem;
  font-family: TELUS Core Icons;
  line-height: 1.6;
  content: '';
  background-image: url(data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4gIDxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjUwIiBmaWxsPSIjNGIyODZkIiAvPjwvc3ZnPg==);
  color: #4b286d;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  width: 0.32rem;
  height: 0.32rem;
  top: 0.65rem;
}

.c1 {
  padding-left: calc(2rem + 1px);
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 :last-child .c0 {
  margin-bottom: 0;
}

<UnorderedList
  listStyle="circle"
  size="medium"
>
  <Styled(Box)
    between={2}
    inline={false}
    tag="ul"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "& {",
              "padding-left: calc(2rem + 1px);",
              "}",
              "& & {",
              "margin-top: 1rem;",
              "margin-bottom: 0.5rem;",
              "}",
              "& :last-child & {",
              "margin-bottom: 0;",
              "}",
            ],
          },
          "defaultProps": Object {
            "below": undefined,
            "between": undefined,
            "className": undefined,
            "horizontal": undefined,
            "inline": false,
            "inset": undefined,
            "tag": "div",
            "vertical": undefined,
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "below": [Function],
            "between": [Function],
            "children": [Function],
            "className": [Function],
            "horizontal": [Function],
            "inline": [Function],
            "inset": [Function],
            "tag": [Function],
            "vertical": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "below": undefined,
              "between": undefined,
              "className": undefined,
              "horizontal": undefined,
              "inline": false,
              "inset": undefined,
              "tag": "div",
              "vertical": undefined,
            },
            "displayName": "Box",
            "propTypes": Object {
              "below": [Function],
              "between": [Function],
              "children": [Function],
              "className": [Function],
              "horizontal": [Function],
              "inline": [Function],
              "inset": [Function],
              "tag": [Function],
              "vertical": [Function],
            },
            "render": [Function],
          },
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={false}
      tag="ul"
    >
      <Box
        between={2}
        className="c0 c1"
        inline={false}
        tag="ul"
      >
        <styled.div
          between={2}
          className="c0 c1"
          inline={false}
          tag="ul"
        >
          <StyledComponent
            between={2}
            className="c0 c1"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "c2",
                  "rules": Array [
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={false}
            tag="ul"
          >
            <ul
              className="c0 c1 c0 c1 c2"
            >
              <UnorderedList.Item
                key=".$.0"
                listStyle="circle"
                size="medium"
              >
                <UnorderedItem__StyledUnorderedItem
                  iconStyle="circle"
                  size="medium"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "UnorderedItem__StyledUnorderedItem",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                        "target": "li",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    iconStyle="circle"
                    size="medium"
                  >
                    <li
                      className="c3"
                      size="medium"
                    >
                      Lorem ipsum
                    </li>
                  </StyledComponent>
                </UnorderedItem__StyledUnorderedItem>
              </UnorderedList.Item>
              <UnorderedList.Item
                key=".$.2"
                listStyle="circle"
                size="medium"
              >
                <UnorderedItem__StyledUnorderedItem
                  iconStyle="circle"
                  size="medium"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "UnorderedItem__StyledUnorderedItem",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                        "target": "li",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    iconStyle="circle"
                    size="medium"
                  >
                    <li
                      className="c3"
                      size="medium"
                    >
                      Dolor sit amet
                    </li>
                  </StyledComponent>
                </UnorderedItem__StyledUnorderedItem>
              </UnorderedList.Item>
            </ul>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</UnorderedList>
`;

exports[`<UnorderedList /> can have a list style 2`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c3 {
  position: relative;
  line-height: 1.5;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  font-weight: 400;
}

.c3::before {
  display: block;
  position: absolute;
  left: -2rem;
  font-family: TELUS Core Icons;
  line-height: 1.6;
  content: '\\f104';
  font-size: 1rem;
  width: 0.75rem;
  color: #c12335;
}

.c1 {
  padding-left: calc(2rem + 1px);
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 :last-child .c0 {
  margin-bottom: 0;
}

<UnorderedList
  listStyle="x"
  size="medium"
>
  <Styled(Box)
    between={2}
    inline={false}
    tag="ul"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "& {",
              "padding-left: calc(2rem + 1px);",
              "}",
              "& & {",
              "margin-top: 1rem;",
              "margin-bottom: 0.5rem;",
              "}",
              "& :last-child & {",
              "margin-bottom: 0;",
              "}",
            ],
          },
          "defaultProps": Object {
            "below": undefined,
            "between": undefined,
            "className": undefined,
            "horizontal": undefined,
            "inline": false,
            "inset": undefined,
            "tag": "div",
            "vertical": undefined,
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "below": [Function],
            "between": [Function],
            "children": [Function],
            "className": [Function],
            "horizontal": [Function],
            "inline": [Function],
            "inset": [Function],
            "tag": [Function],
            "vertical": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "below": undefined,
              "between": undefined,
              "className": undefined,
              "horizontal": undefined,
              "inline": false,
              "inset": undefined,
              "tag": "div",
              "vertical": undefined,
            },
            "displayName": "Box",
            "propTypes": Object {
              "below": [Function],
              "between": [Function],
              "children": [Function],
              "className": [Function],
              "horizontal": [Function],
              "inline": [Function],
              "inset": [Function],
              "tag": [Function],
              "vertical": [Function],
            },
            "render": [Function],
          },
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={false}
      tag="ul"
    >
      <Box
        between={2}
        className="c0 c1"
        inline={false}
        tag="ul"
      >
        <styled.div
          between={2}
          className="c0 c1"
          inline={false}
          tag="ul"
        >
          <StyledComponent
            between={2}
            className="c0 c1"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "c2",
                  "rules": Array [
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={false}
            tag="ul"
          >
            <ul
              className="c0 c1 c0 c1 c2"
            >
              <UnorderedList.Item
                key=".$.0"
                listStyle="x"
                size="medium"
              >
                <UnorderedItem__StyledUnorderedItem
                  iconStyle="x"
                  size="medium"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "UnorderedItem__StyledUnorderedItem",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                        "target": "li",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    iconStyle="x"
                    size="medium"
                  >
                    <li
                      className="c3"
                      size="medium"
                    >
                      Lorem ipsum
                    </li>
                  </StyledComponent>
                </UnorderedItem__StyledUnorderedItem>
              </UnorderedList.Item>
              <UnorderedList.Item
                key=".$.2"
                listStyle="x"
                size="medium"
              >
                <UnorderedItem__StyledUnorderedItem
                  iconStyle="x"
                  size="medium"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "UnorderedItem__StyledUnorderedItem",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                        "target": "li",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    iconStyle="x"
                    size="medium"
                  >
                    <li
                      className="c3"
                      size="medium"
                    >
                      Dolor sit amet
                    </li>
                  </StyledComponent>
                </UnorderedItem__StyledUnorderedItem>
              </UnorderedList.Item>
            </ul>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</UnorderedList>
`;

exports[`<UnorderedList /> renders 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c3 {
  position: relative;
  line-height: 1.5;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  font-weight: 400;
}

.c3::before {
  display: block;
  position: absolute;
  left: -2rem;
  font-family: TELUS Core Icons;
  line-height: 1.6;
  content: '';
  background-image: url(data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4gIDxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjUwIiBmaWxsPSIjNGIyODZkIiAvPjwvc3ZnPg==);
  color: #4b286d;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  width: 0.32rem;
  height: 0.32rem;
  top: 0.65rem;
}

.c1 {
  padding-left: calc(2rem + 1px);
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 :last-child .c0 {
  margin-bottom: 0;
}

<ul
  class="c0 c1 c0 c1 c2"
>
  <li
    class="c3"
  >
    Lorem ipsum
  </li>
  <li
    class="c3"
  >
    Dolor sit amet
  </li>
</ul>
`;

exports[`<UnorderedList /> renders a mixed list of items 1`] = `
<Styled(Box)
  between={2}
  inline={false}
  tag="ul"
>
  <UnorderedList.Item
    itemStyle="checkmark"
    key=".$.0"
    listStyle="circle"
    size="medium"
  >
    Lorem ipsum
  </UnorderedList.Item>
  <UnorderedList.Item
    itemStyle="x"
    key=".$.1"
    listStyle="circle"
    size="medium"
  >
    Dolor sit amet
  </UnorderedList.Item>
</Styled(Box)>
`;
